--- a/twtcinema/package.json
+++ b/twtcinema/package.json
@@ -31,6 +31,7 @@
         "react-scripts": "5.0.1",
         "react-toastify": "^9.0.8",
         "recharts": "^2.1.16",
+        "svgo": "^3.0.2",
         "swiper": "^8.4.3",
         "web-vitals": "^2.1.4"
     },
